Side bar basic structure finalised

--- a/src/app/components/laoyout/layout/sidebar/sidebar.component.html
+++ b/src/app/components/laoyout/layout/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         Sidebar
       </h1>
     </div>
-    <div class="flex flex-col">
+    <div class="flex flex-col overflow-hidden">
       <a href="#" class="flex items-center p-4 hover:bg-gray-100 transition-colors duration-750">
         <svg class="h-6 w-6 text-gray-600 flex-shrink-0" fill="currentColor" viewBox="0 0 24 24">
           <path d="M12 2a10 10 0 00-10 10 10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2zm0 18a8 8 0 118-8 8 8 0 01-8 8z"/>
