--- a/src/app/components/laoyout/layout/header/header.component.html
+++ b/src/app/components/laoyout/layout/header/header.component.html
@@ -1,9 +1,20 @@
 <!-- <p>header works!</p> -->
-<header class="sticky top-0 z-10 flex items-center justify-between bg-white shadow-md p-4">
-    <div class="flex items-center">
+<header class="sticky top-0 z-10 flex items-center justify-between bg-white shadow-md p-4
+transition-all duration-500 ease-in-out"
+[ngClass]="{'h-5': !isHovered, 'h-16': isHovered}"
+  (mouseenter)="toggleHover(true)"
+  (mouseleave)="toggleHover(false)"
+  >
+    <!-- remove overflow-hidden if the dropdown menu doesn't appear -->
+     
+    <div class="flex items-center overflow-hidden
+     transition-transform duration-500 ease-in-out transform"
+     [ngClass]="{'translate-y-0': isHovered, '-translate-y-full': !isHovered}">
       <h1 class="text-xl font-semibold">National Park Information</h1>
     </div>
-    <div class="flex items-center space-x-4">
+    <div class="flex items-center space-x-4
+    transition-transform duration-500 ease-in-out transform"
+    [ngClass]="{'translate-y-0': isHovered, '-translate-y-full': !isHovered}">
       <div class="relative group">
         <button class="flex items-center justify-center w-10 h-10 rounded-full bg-gray-200 hover:bg-gray-300 transition-colors">
           <svg class="h-6 w-6 text-gray-600" fill="currentColor" viewBox="0 0 24 24">
